fix(swagger): edit body update
