# docs/swagger.json
@@ -178,6 +178,15 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "Payment body",
+                        "name": "paymentInput",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/payment.InputPayment"
+                        }
                     }
                 ],
                 "responses": {
@@ -408,6 +417,15 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "Product body",
+                        "name": "productInput",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/product.InputProduct"
+                        }
                     }
                 ],
                 "responses": {
